--- a/package.json
+++ b/package.json
@@ -11,17 +11,20 @@
     "react-dom": "17.0.2",
     "react-scripts": "4.0.3",
     "typescript": "4.1.2",
-    "crypto-js": "4.0.0",
+    "crypto-js": "4.2.0",
     "@xchainjs/xchain-crypto": "0.2.3",
     "bip39": "3.0.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -b gh-pages -d build"
+    "start": "NODE_OPTIONS=--openssl-legacy-provider react-scripts start",
+    "build": "NODE_OPTIONS=--openssl-legacy-provider react-scripts build",
+    "test": "NODE_OPTIONS=--openssl-legacy-provider react-scripts test",
+    "eject": "NODE_OPTIONS=--openssl-legacy-provider  react-scripts eject",
+    "predeploy": "NODE_OPTIONS=--openssl-legacy-provider npm run build",
+    "deploy": "NODE_OPTIONS=--openssl-legacy-provider gh-pages -b gh-pages -d build"
+  },
+  "resolutions": {
+    "postcss": "7.0.35"
   },
   "eslintConfig": {
     "extends": [
