--- a/package.json
+++ b/package.json
@@ -7,24 +7,31 @@
     "@types/node": "12.0.0",
     "@types/react": "17.0.0",
     "@types/react-dom": "17.0.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-scripts": "4.0.3",
-    "typescript": "4.1.2",
-    "crypto-js": "4.2.0",
     "@xchainjs/xchain-crypto": "0.2.3",
-    "bip39": "3.0.3"
+    "bip39": "3.0.3",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.1",
+    "crypto-js": "4.2.0",
+    "postcss": "8.0.0",
+    "postcss-flexbugs-fixes": "5",
+    "process": "^0.11.10",
+    "react": "17.0.2",
+    "react-app-rewired": "^2.2.1",
+    "react-dom": "17.0.2",
+    "react-scripts": "5.0.1",
+    "stream-browserify": "^3.0.0",
+    "typescript": "4.1.2"
   },
   "scripts": {
     "start": "NODE_OPTIONS=--openssl-legacy-provider react-scripts start",
-    "build": "NODE_OPTIONS=--openssl-legacy-provider react-scripts build",
+    "build": "NODE_OPTIONS=--openssl-legacy-provider react-app-rewired build",
     "test": "NODE_OPTIONS=--openssl-legacy-provider react-scripts test",
     "eject": "NODE_OPTIONS=--openssl-legacy-provider  react-scripts eject",
     "predeploy": "NODE_OPTIONS=--openssl-legacy-provider npm run build",
     "deploy": "NODE_OPTIONS=--openssl-legacy-provider gh-pages -b gh-pages -d build"
   },
   "resolutions": {
-    "postcss": "7.0.35"
+    "postcss": "8.0.0"
   },
   "eslintConfig": {
     "extends": [
