--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "backup-decryptor",
+  "name": "backup-decryptor1",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://xdefi-tech.github.io/backup-decryptor/",
