--- a/package.json
+++ b/package.json
@@ -7,24 +7,25 @@
     "@types/node": "12.0.0",
     "@types/react": "17.0.0",
     "@types/react-dom": "17.0.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-scripts": "4.0.3",
-    "typescript": "4.1.2",
-    "crypto-js": "4.2.0",
     "@xchainjs/xchain-crypto": "0.2.3",
-    "bip39": "3.0.3"
+    "bip39": "3.0.3",
+    "crypto-browserify": "^3.12.1",
+    "crypto-js": "4.2.0",
+    "process": "^0.11.10",
+    "react": "17.0.2",
+    "react-app-rewired": "^2.2.1",
+    "react-dom": "17.0.2",
+    "react-scripts": "5.0.1",
+    "stream-browserify": "^3.0.0",
+    "typescript": "4.1.2"
   },
   "scripts": {
-    "start": "NODE_OPTIONS=--openssl-legacy-provider react-scripts start",
-    "build": "NODE_OPTIONS=--openssl-legacy-provider react-scripts build",
-    "test": "NODE_OPTIONS=--openssl-legacy-provider react-scripts test",
-    "eject": "NODE_OPTIONS=--openssl-legacy-provider  react-scripts eject",
-    "predeploy": "NODE_OPTIONS=--openssl-legacy-provider npm run build",
+    "start": "NODE_OPTIONS=--openssl-legacy-provider react-app-rewired start",
+    "build": "DEBUG=webpack:* NODE_OPTIONS=--openssl-legacy-provider react-app-rewired build --verbose",
+    "test": "NODE_OPTIONS=--openssl-legacy-provider react-app-rewired test",
+    "eject": "NODE_OPTIONS=--openssl-legacy-provider react-app-rewired eject",
+    "predeploy": "NODE_OPTIONS=--openssl-legacy-provider yarn run build",
     "deploy": "NODE_OPTIONS=--openssl-legacy-provider gh-pages -b gh-pages -d build"
-  },
-  "resolutions": {
-    "postcss": "7.0.35"
   },
   "eslintConfig": {
     "extends": [
@@ -45,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/crypto-js": "^4.0.1",
     "gh-pages": "^3.1.0"
   }
