--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-dom": "17.0.2",
     "react-scripts": "5.0.1",
     "stream-browserify": "^3.0.0",
-    "typescript": "4.1.2"
+    "typescript": "4.1.2",
+    "vm-browserify": "^1.1.2"
   },
   "scripts": {
     "start": "NODE_OPTIONS=--openssl-legacy-provider react-app-rewired start",
